[package]
name = "oberon-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
iso8601-timestamp = "0.2.10"
oberon = "1.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
uuid = { version = "1.3.0", features = ["v4"] }
