[package]
name = "oberon-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
iso8601-timestamp = "0.2.10"
oberon = "1.3.0"
rand_chacha = "0.3.1"
rand_core = { version = "0.6.4", features = ["std"] }
rand_xorshift = "0.3.0"
statrs = "0.16.0"
uuid = { version = "1.3.0", features = ["v4"] }
